[package]
name = "hyperion_engine"
version = "0.1.0"
edition = "2021"
authors = ["Hyperion Labs <contact@hyperion.xyz>"]
description = "High-performance, modular DePIN Node Client framework."
license = "Apache-2.0"

[dependencies]
# Async runtime (Standard for Rust)
tokio = { version = "1", features = ["full"] }
# Logging and Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Configuration management
config = "0.13"
# CLI Argument Parsing
clap = { version = "4.0", features = ["derive"] }
# Random number generation
rand = "0.9"

# --- DePIN Core Networking (Libp2p) ---
# Note: Production builds should pin specific versions and features
libp2p = { version = "0.53", features = ["tokio", "tcp", "noise", "yamux", "macros", "ping", "identify", "kad"] }
reqwest = { version = "0.13.1", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }

# --- Future Hardware Abstraction Libraries (Optional) ---
# nvml-wrapper = "0.9" # For Nvidia GPU monitoring
# candle-core = "0.3" # For Rust-native AI Inference